Agregando mensaje de error:vacio

--- a/Proyecto_Final/StarGame/public/styles/titulos.css
+++ b/Proyecto_Final/StarGame/public/styles/titulos.css
@@ -53,7 +53,7 @@ li {
 
 }
 
-.btn-primary-no {
+/*.btn-primary-no {
     color: #fff;
     background-color: red;
     border-color: red;
@@ -112,7 +112,7 @@ li {
     color: #889653;
     background-color: #fff ;
     border-color: #889653;
-}
+}*/
 
 .btn-back {
   color: #fff;
